deploy: 7e488bacaec7925958a551cd0f882ef4c2876119

--- a/ar/business-and-employers/index.html
+++ b/ar/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الشركات التجارية وأصحاب العمل</h1>
           
-            <p class="small-text">Last updated&nbsp;11:56 ص الساعة 17 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;4:38 م الساعة 17 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -526,7 +526,7 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>اتبع <a href="/ar/industry-guidance/">التوجيهات الخاصة بالصناعة</a> لإدارة صناعتك أو شركتك. بغض النظر عن نوع العمل الذي تمارسه:</p>
-<ul><li>اطلب من الموظفين البقاء في المنزل إذا شعروا بالمرض.<ul><li>قم بتنفيذ سياسات الإجازات المرضية لدعم ذلك.</li><li>هناك برامج حكومية تدعم <a href="https://www.dir.ca.gov/dlse/Comparison-COVID-19-Paid-Leave.html">الإجازات المرضية للمصابين</a> بكوفيد-19<a href="https://www.labor.ca.gov/coronavirus2019/#chart">وتعويض العاملين</a>.</li></ul></li><li>نظف مكان العمل بشكل روتيني.</li><li>قم بتقليل السفر. شجع على عقد اللقاءات عبر الفيديو وقم بالحد من التجمعات الكبيرة.</li><li>اتبع <a href="https://www.dir.ca.gov/dosh/coronavirus/General-Industry.html">توجيهات كاليفورنيا/إدارة السلامة والصحة المهنية (Cal/OSHA)</a> حول حماية العمال من كوفيد-19.</li><li>اتبع <a href="https://www.cdc.gov/coronavirus/2019-ncov/downloads/workplace-school-and-home-guidance.pdf">توجيهات مركز مكافحة الأمراض والوقاية منها (CDC) للحفاظ على سلامة مكان العمل</a> (PDF).</li></ul>
+<ul><li>اطلب من الموظفين البقاء في المنزل إذا شعروا بالمرض.<ul><li>قم بتنفيذ سياسات الإجازات المرضية لدعم ذلك.</li><li>هناك برامج حكومية تدعم <a href="https://www.dir.ca.gov/dlse/Comparison-COVID-19-Paid-Leave.html">الإجازات المرضية للمصابين</a> بكوفيد-19<a href="https://www.labor.ca.gov/coronavirus2019/#chart">وتعويض العاملين</a>.</li></ul></li><li>نظف مكان العمل بشكل روتيني.</li><li>قم بتقليل السفر. شجع على عقد اللقاءات عبر الفيديو وقم بالحد من التجمعات الكبيرة.</li><li>اتبع <a href="https://www.dir.ca.gov/dosh/coronavirus/General-Industry.html">توجيهات كاليفورنيا/إدارة السلامة والصحة المهنية (Cal/OSHA)</a> حول حماية العمال من كوفيد-19.</li><li>اتبع <a href="https://www.cdc.gov/coronavirus/2019-ncov/downloads/workplace-school-and-home-guidance.pdf">توجيهات مركز مكافحة الأمراض والوقاية منها (CDC) للحفاظ على سلامة مكان العمل </a> (PDF).</li></ul>
 
       </div>
     </div>
@@ -540,51 +540,7 @@
 
 
 
-<p><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/edit.php">جميع المناصب</a></p>
 
-
-
-
-
-
-
-<h4>ما الخطوات التي يجب عليَّ اتخاذها إذا جاءت نتيجة الاختبار إيجابية لأحد موظفي الشركة؟</h4>
-
-
-
-<p>إذا اكتشف صاحب العمل ثبوت إصابة أحد موظفيه بفيروس كوفيد-19 أو ظهور الأعراض عليه:</p>
-
-
-
-<ul><li>فأرسل العامل إلى المنزل</li><li>أخبرهم عن الإجازة المرضية المتاحة من خلال القانون وسياسة الشركة</li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--ar.pdf">اتبع الإرشادات</a> الخاصة بالعزل والحجر الصحي وإجراء الفحوصات، وتحرى الوقت الذي على العامل فيه العودة إلى العمل</li><li>أبلغ العمال الآخرين الذين قد يكونوا تعرضوا للخطر وقدم لهم:<ul><li>استشارات الرعاية الصحية حول تعرضهم المحتمل لخطر الإصابة</li><li>تعليمات حول إجراء الاختبار</li><li>معلومات عن العزل والحجر الصحي والأعراض</li></ul></li><li>الحفاظ على سرية هويات الأشخاص المشتبه في إصابتهم أو المؤكدة إصابتهم</li><li>توفير سياسات إجازات مرضية تسمح للعاملين المرضى بالبقاء في المنزل دون جزاء</li><li>توعية العاملين بسياسات الإجازة</li></ul>
-
-
-
-<p>يجب على أصحاب العمل إبلاغ إدارات الصحة المحلية (LHD) عن حالات كوفيد-19 إذا:</p>
-
-
-
-<ul><li>أصبح لديهم ثلاث حالات مؤكدة أو أكثر في غضون أسبوعين</li><li>لم يكونوا أحد مزودي خدمات الرعاية الصحية</li><li>لم تكن الحالات في إحدى مؤسسات الرعاية الداخلية</li></ul>
-
-
-
-<p>يجب على أصحاب العمل الإبلاغ عن الحالات لإدارة الصحة المحلية (LHD)  حيث يتواجد صاحب العمل وإدارة الصحة المحلية حيث يعيش العمال. يجب على أصحاب العمل تزويد إدارات الصحة المحلية بما يلي:</p>
-
-
-
-<ul><li>قائمة بجميع العاملين بالموقع</li><li>معلومات عن العاملين المؤكدة إصابتهم:<ul><li>المسميات الوظيفية</li><li>مناطق العمل</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">حالات الاختلاط اللصيقة</a> بالموظفين الآخرين</li><li>تاريخ بداية الأعراض</li><li>المناوبات التي كانوا يعملون بها حين عُرِف أنهم مصابون بالعدوى</li></ul></li></ul>
-
-
-
-<p>قد تطلب إدارت الصحة المحلية مزيدًا من المعلومات حول العاملين المصابين بـكوفيد مثل:</p>
-
-
-
-<ul><li>التوصيف الوظيفي</li><li>الموقع</li><li>جدول العمل</li><li>مدينة ومقاطعة السكن</li></ul>
-
-
-
-<p>لمزيد من المعلومات حول اشتراطات صاحب العمل، التي منها التنظيف والتطهير، راجع <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">مواجهة كوفيد-19 في مكان العمل لأصحاب العمل (PDF)</a>.</p>
 
 
 
@@ -592,7 +548,70 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>ما الاحتياطات التي يجب اتباعها بالنسبة للعاملين والمنظمات المتخصصة في الرعاية الصحية؟</h4>
+<h4>ما الخطوات التي يجب عليَّ اتخاذها إذا جاءت نتيجة الاختبار إيجابية لأحد موظفي الشركة؟</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>إذا اكتشف صاحب العمل أن أحد العمال أو الموظفين قد ثبتت إيجابية إصابته بفيروس كوفيد-19 أو ظهرت عليه الأعراض:</p>
+<ul><li>فأرسل العامل إلى المنزل</li><li>أخبرهم عن الإجازة المرضية المتاحة من خلال القانون وسياسة الشركة</li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--ar.pdf">اتبع الإرشادات</a> الخاصة بالعزل والحجر الصحي وإجراء الفحوصات، وتحرى الوقت الذي على العامل فيه العودة إلى العمل</li><li>أبلغ العمال الآخرين الذين قد يكونوا تعرضوا للخطر وقدم لهم:<ul><li>استشارات الرعاية الصحية حول تعرضهم المحتمل لخطر الإصابة</li><li>تعليمات حول إجراء الاختبار</li><li>معلومات عن العزل والحجر الصحي والأعراض</li></ul></li><li>حافظ على سرية هويات الأشخاص المشتبه بإصابتهم أو المؤكدة إصابتهم</li><li>توفير سياسات إجازات مرضية تسمح للعاملين المرضى بالبقاء في المنزل دون جزاء</li><li>توعية العمال بسياسات الإجازات</li></ul>
+<p>يجب على أصحاب العمل إبلاغ إدارات الصحة المحلية (LHD) عن حالات كوفيد-19 إذا:</p>
+<ul><li>أصبح لديهم ثلاث حالات مؤكدة أو أكثر في غضون أسبوعين</li><li>لم يكونوا أحد مزودي خدمات الرعاية الصحية</li><li>لم تكن الحالات في إحدى مؤسسات الرعاية الداخلية</li></ul>
+<p>يجب على أصحاب العمل الإبلاغ عن الحالات لإدارة الصحة المحلية (LHD)  حيث يتواجد صاحب العمل وإدارة الصحة المحلية حيث يعيش العمال. يجب على أصحاب العمل تزويد إدارات الصحة المحلية بما يلي:</p>
+<ul><li>قائمة بجميع العاملين بالموقع</li><li>معلومات عن العاملين المؤكدة إصابتهم:<ul><li>المسميات الوظيفية</li><li>مناطق العمل</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">حالات الاختلاط اللصيقة</a> بالموظفين الآخرين</li><li>تاريخ بداية الأعراض</li><li>المناوبات التي كانوا يعملون بها حين عُرِف أنهم مصابون بالعدوى</li></ul></li></ul>
+<p>قد تطلب إدارت الصحة المحلية مزيدًا من المعلومات حول العاملين المصابين بـكوفيد مثل:</p>
+<ul><li>التوصيف الوظيفي</li><li>الموقع</li><li>جدول العمل</li><li>مدينة ومقاطعة السكن</li></ul>
+<p>للمزيد من المعلومات حول متطلبات صاحب العمل، بما فيها التنظيف والتطهير، راجع <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">الاستجابة لكوفيد-19 في مكان العمل لأصحاب العمل (PDF)</a>.</p>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
+<h4>ما الاحتياطات التي يجب على العاملين في مجال الرعاية الصحية والمنظمات اتباعها؟</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
