--- a/es/business-and-employers/index.html
+++ b/es/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Empresas y empleadores</h1>
           
-            <p class="small-text">Last updated&nbsp;17 de noviembre de 2020 a las 11:56 a. m.</p>
+            <p class="small-text">Last updated&nbsp;17 de noviembre de 2020 a las 4:38 p. m.</p>
           
         </div>
       </div>
@@ -540,51 +540,70 @@
 
 
 
-<p><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/edit.php">Todas las publicaciones</a></p>
 
 
 
 
-
-
-
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
 <h4>¿Qué medidas debo tomar si un empleado da positivo en mi negocio?</h4>
-
-
-
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
 <p>Si un empleador descubre que un trabajador dio positivo por COVID-19 o tiene síntomas:</p>
-
-
-
 <ul><li>Envíelo a casa.</li><li>Infórmele sobre la licencia por enfermedad disponible a través de la ley y la política de la empresa.</li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--es.pdf">Siga la guía</a> sobre aislamiento, cuarentena, pruebas y cuándo debe el trabajador regresar al trabajo.</li><li>Informe a otros trabajadores que puedan haber estado expuestos y proporcione:<ul><li>consultas sanitarias sobre su posible exposición</li><li>instrucciones para hacerse la prueba</li><li>información sobre aislamiento, cuarentena y síntomas</li></ul></li><li>Mantenga la confidencialidad de la identidad de las personas de quienes se sospecha y de las que se sabe que son casos confirmados.</li><li>Proporcione políticas de licencia por enfermedad que permitan a los trabajadores enfermos permanecer en casa sin penalización.</li><li>Informe a los trabajadores sobre las políticas de licencias.</li></ul>
-
-
-
 <p>Los empleadores deben reportar los casos de COVID-19 a los departamentos de salud locales (Local Health Department, LHD) si:</p>
-
-
-
 <ul><li>Tienen tres o más casos confirmados en dos semanas.</li><li>No son proveedores de atención médica.</li><li>Los casos no ocurrieron en un entorno residencial.</li></ul>
-
-
-
 <p>Los empleadores deben reportar los casos al LHD donde se ubica el empleador y al LHD donde viven los trabajadores. Los empleadores deben proporcionar a los LHD:</p>
-
-
-
 <ul><li>una lista de todos los trabajadores del lugar</li><li>información sobre trabajadores con casos confirmados:<ul><li>puesto de trabajo</li><li>áreas de trabajo</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">contactos estrechos</a> con otros empleados</li><li>fecha en que comenzaron los síntomas</li><li>en qué turnos trabajaron mientras podían contagiar a otros</li></ul></li></ul>
-
-
-
 <p>Los LHD pueden solicitar más información sobre los trabajadores con COVID, incluidos su:</p>
-
-
-
 <ul><li>descripción del trabajo</li><li>ubicación</li><li>horario de trabajo</li><li>ciudad y condado de residencia</li></ul>
-
-
-
 <p>Para obtener más información sobre los requisitos de los empleadores, incluida la limpieza y la desinfección, consulte <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">Respuesta a la COVID-19 en el lugar de trabajo para empleadores (PDF)</a>.</p>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
