--- a/tl/contact-tracing/index.html
+++ b/tl/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 3:59 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 18, 2020 sa 1:37 PM</p>
           
         </div>
       </div>
@@ -479,7 +479,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Oo, itinuturing ka pa ring isang <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">malapit na contact</a> kahit nakasuot ka ng mask habang nasa paligid ng isang taong may COVID-19. Ayon sa mga pag-aaral, ang mga mask ay posibleng magbigay ng kaunting proteksyon sa nagsusuot nito, at proteksyon sa ibang tao sakaling mayroon kang impeksyon. </p>
+<p>Oo, itinuturing ka pa ring isang <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">malapit na contact</a> kahit nakasuot ka ng mask habang nasa paligid ng isang taong may COVID-19. Ayon sa mga pag-aaral, ang mga mask ay posibleng magbigay ng kaunting proteksyon sa nagsusuot nito, at proteksyon sa ibang tao sakaling mayroon kang impeksyon, pero hindi 100% na garantisadong mapipigilan ng mga ito ang<br>transmisyon.</p>
 
       </div>
     </div>
