--- a/ar/contact-tracing/index.html
+++ b/ar/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>تتبع المخالطين</h1>
           
-            <p class="small-text">Last updated&nbsp;3:59 م الساعة 16 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;1:37 م الساعة 18 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -234,7 +234,7 @@
 
 
 
-<p>من خلال مساعدة الأشخاص المصابين والمعرضين للإصابة على إجراء العزل الذاتي أو الحجر الصحي والتعرف على الأنماط بسرعة، يمكننا إبطاء انتشار العدوى والمساعدة في تجنب <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--ar.pdf">تفشي المرض</a>. وهذا الأمر يساعد ولاية كاليفورنيا على حماية الأفراد وأحبائهم ومجتمعاتهم من العدوى والأمراض الخطيرة. كما يساعدنا هذا الأمر على الحفاظ على تقليل الطاقة الاستيعابية لنظام الرعاية الصحية الخاص بنا. يُعد تتبع المخالطين نشاطًا ضروريًا يتيح لنا إعادة فتح المدارس والأعمال التجارية بأمان. </p>
+<p>من خلال مساعدة الأشخاص المصابين والمعرضين للإصابة على إجراء العزل الذاتي أو الحجر الصحي والتعرف على الأنماط بسرعة، يمكننا إبطاء انتشار العدوى والمساعدة في تجنب <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--ar.pdf">تفشي المرض</a>. وهذا الأمر يساعد ولاية كاليفورنيا على حماية الأفراد وأحبائهم ومجتمعاتهم من العدوى والأمراض الخطيرة. كما يساعدنا هذا الأمر على الحفاظ على تقليل الطاقة الاستيعابية لنظام الرعاية الصحية الخاص بنا. يُعد تتبع المخالطين نشاطًا ضروريًا يتيح لنا إعادة فتح المدارس والأعمال التجارية بأمان.</p>
 
 
 
@@ -479,7 +479,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>نعم، ما زلت تُعد <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">مخالطًا مخالطة لصيقة</a> حتى لو كنت ترتدي قناعًا أثناء وجودك بالقرب من شخص مصاب بمرض كوفيد-19. أظهرت الدراسات أن الأقنعة توفر قدرًا من الحماية لمرتديها، ولكنها تهدف في الأساس إلى حماية الأشخاص الآخرين في حالة إصابتك. </p>
+<p>نعم، ما زلت تُعد <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">مخالطًا</a> حتى لو كنت ترتدي قناعًا في أثناء وجودك بالقرب من شخص مصاب بمرض كوفيد-19. تشير الدراسات إلى أن الأقنعة توفر بعض الحماية لمن يرتدونها، بالإضافة إلى المساعدة في حماية الأشخاص الآخرين في حالة إصابتك بالعدوى، لكنها لا تضمن إيقاف<br>انتقال العدوى بنسبة 100%.</p>
 
       </div>
     </div>
