--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;November 18, 2020 at 8:36 PM</p>
+            <p class="small-text">Last updated&nbsp;November 19, 2020 at 10:31 AM</p>
           
         </div>
       </div>
