--- a/es/contact-tracing/index.html
+++ b/es/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Rastreo de contactos</h1>
           
-            <p class="small-text">Last updated&nbsp;16 de noviembre de 2020 a las 3:59 p. m.</p>
+            <p class="small-text">Last updated&nbsp;18 de noviembre de 2020 a las 1:37 p. m.</p>
           
         </div>
       </div>
@@ -178,7 +178,7 @@
 
 
 
-<ul><li><strong><a href="#what-is-contact-tracing">¿Qué es el </a><a href="#what-contact-tracing-is">rastreo de contactos</a><a href="#what-is-contact-tracing">?</a></strong></li><li><strong><a href="#what-a-contact-tracer-will-ask">Qué pedirá y ofrecerá un rastreador de contactos.</a></strong></li><li><strong><a href="#private">Cómo se mantiene la privacidad de su información.</a></strong></li><li><strong><a href="#if-you-are-contacted">Qué hacer si se ponen en contacto con usted.</a></strong></li><li><strong><a href="#other-programs">Otros programas de notificación.</a></strong></li><li><strong><a href="#questions">Preguntas y respuestas.</a></strong></li></ul>
+<ul><li><strong><a href="#what-is-contact-tracing">¿Qué es el </a><a href="#what-contact-tracing-is">rastreo de contactos</a><a href="#what-is-contact-tracing">?</a></strong></li><li><strong><a href="#what-a-contact-tracer-will-ask">Qué pedirá y ofrecerá un rastreador de contactos.</a></strong></li><li><strong><a href="#private">Cómo se mantiene la privacidad de su información.</a></strong></li><li><strong><a href="#if-you-are-contacted">Qué hacer si se ponen en contacto con usted.</a></strong></li><li><strong><a href="#other-programs">Otros programas de notificación</a></strong></li><li><strong><a href="#questions">Preguntas y respuestas</a></strong></li></ul>
 
 
 
@@ -479,7 +479,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Sí, se le considera un <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">contacto estrecho</a> incluso si llevaba puesta una mascarilla mientras estuvo cerca de alguien con COVID-19. Los estudios sugieren que las mascarillas ofrecen cierta protección al usuario, así como también ayudan a proteger a otras personas en caso de que usted esté infectado. </p>
+<p>Sí, se le considera un <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">contacto estrecho</a> incluso si llevaba puesta una mascarilla mientras estuvo cerca de alguien con COVID-19. Los estudios sugieren que las mascarillas ofrecen cierta protección al usuario, así como también ayudan a proteger a otras personas en caso de que usted esté infectado, pero no está 100 % garantizado que detengan<br>la transmisión.</p>
 
       </div>
     </div>
