--- a/vi/business-and-employers/index.html
+++ b/vi/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Doanh nghiệp và chủ hãng</h1>
           
-            <p class="small-text">Last updated&nbsp;17 tháng 11, 2020 lúc 11:56</p>
+            <p class="small-text">Last updated&nbsp;17 tháng 11, 2020 lúc 16:38</p>
           
         </div>
       </div>
@@ -540,51 +540,70 @@
 
 
 
-<p><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/edit.php">Tất Cả Các Chức Vụ</a></p>
 
 
 
 
-
-
-
-<h4>Tôi cần thực hiện những bước nào nếu có một nhân viên có kết quả xét nghiệm dương tính tại doanh nghiệp của mình?</h4>
-
-
-
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
+<h4>Tôi cần thực hiện những bước nào nếu có nhân viên có kết quả xét nghiệm dương tính tại doanh nghiệp của mình?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
 <p>Nếu chủ sử dụng lao động phát hiện người lao động có kết quả xét nghiệm dương tính với COVID-19 hoặc xuất hiện các triệu chứng, hãy:</p>
-
-
-
 <ul><li>Cho người lao động đó về nhà</li><li>Cho họ biết về việc được nghỉ ốm theo quy định của pháp luật và chính sách của công ty</li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--vi.pdf">Làm theo hướng dẫn</a> về tự cách ly, cách ly kiểm dịch, xét nghiệm và thời gian người lao động có thể quay lại làm việc</li><li>Thông báo cho những người lao động khác có thể đã phơi nhiễm và:<ul><li>Tiến hành tư vấn chăm sóc sức khỏe về khả năng phơi nhiễm của họ</li><li>Hướng dẫn tiến hành xét nghiệm</li><li>Cung cấp thông tin về tự cách ly, cách ly kiểm dịch và các triệu chứng</li></ul></li><li>Bảo mật danh tính của những người được xác nhận hoặc nghi ngờ nhiễm bệnh</li><li>Thực hiện chính sách nghỉ ốm cho phép người lao động bị bệnh ở nhà mà không bị phạt</li><li>Thông báo cho người lao động biết về chính sách nghỉ</li></ul>
-
-
-
 <p>Chủ sử dụng lao động phải báo cáo các ca nhiễm bệnh COVID-19 cho các sở y tế địa phương (local health department, LHD) nếu họ:</p>
-
-
-
 <ul><li>Có ba ca xác nhận nhiễm bệnh trở lên trong hai tuần</li><li>Không phải là nhà cung cấp dịch vụ chăm sóc sức khỏe</li><li>Các ca nhiễm bệnh không đang ở trong môi trường cư trú</li></ul>
-
-
-
 <p>Chủ sử dụng lao động phải báo cáo các ca bệnh cho LHD nơi đặt cơ sở của chủ sử dụng lao động và LHD nơi người lao động sinh sống. Chủ sử dụng lao động phải cung cấp cho LHD:</p>
-
-
-
 <ul><li>Danh sách toàn bộ người lao động tại cơ sở</li><li>Thông tin về những người lao động được xác nhận nhiễm bệnh:<ul><li>Chức danh công việc</li><li>Khu vực làm việc</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">Trường hợp tiếp xúc gần</a> với những người lao động khác</li><li>Ngày bắt đầu xuất hiện triệu chứng</li><li>Các ca đã làm việc khi bị nhiễm</li></ul></li></ul>
-
-
-
 <p>LHD có thể hỏi thêm thông tin về những người lao động nhiễm bệnh COVID, bao gồm:</p>
-
-
-
 <ul><li>Mô tả công việc</li><li>Địa điểm</li><li>Lịch làm việc</li><li>Thành phố và quận cư trú</li></ul>
-
-
-
 <p>Để biết thêm thông tin về các yêu cầu đối với chủ sử dụng lao động, bao gồm cả vệ sinh và khử trùng, hãy xem <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">Ứng Phó với Đại Dịch COVID-19 tại Nơi Làm Việc dành cho Chủ Sử Dụng Lao Động (PDF)</a>.</p>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
