--- a/vi/contact-tracing/index.html
+++ b/vi/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Theo dõi tiếp xúc</h1>
           
-            <p class="small-text">Last updated&nbsp;16 tháng 11, 2020 lúc 15:59</p>
+            <p class="small-text">Last updated&nbsp;18 tháng 11, 2020 lúc 13:37</p>
           
         </div>
       </div>
@@ -479,7 +479,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Có, quý vị vẫn được coi là <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">người có tiếp xúc gần</a> ngay cả khi quý vị đang đeo khẩu trang khi ở gần người mắc COVID-19. Các nghiên cứu cho thấy khẩu trang có thể bảo vệ người đeo phần nào, cũng như giúp bảo vệ người khác trong trường hợp quý vị bị nhiễm bệnh. </p>
+<p>Có, quý vị vẫn được coi là <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">người có tiếp xúc gần</a> ngay cả khi quý vị đang đeo khẩu trang khi ở gần người mắc COVID-19. Các nghiên cứu cho thấy khẩu trang có thể bảo vệ người đeo phần nào, cũng như giúp bảo vệ người khác trong trường hợp quý vị bị nhiễm bệnh nhưng khẩu trang không đảm bảo 100% khả năng ngăn chặn<br>sự lây lan.</p>
 
       </div>
     </div>
