--- a/zh-hans/contact-tracing/index.html
+++ b/zh-hans/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>接触者追踪</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午3:59</p>
+            <p class="small-text">Last updated&nbsp;2020年11月18日, 下午1:37</p>
           
         </div>
       </div>
@@ -479,7 +479,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>是的，即使您在与COVID-19感染者相处时佩戴了口罩，您仍被视为<a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">密切接触者</a>。研究表明，口罩可以为佩戴者提供一定保护，并在您受到感染时保护其他人。 </p>
+<p>是的，即使您在与COVID-19感染者相处时佩戴了口罩，您仍被视为<a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">密切接触者</a>。研究表明，口罩可以为佩戴者提供一定保护，并在您受到感染时保护其他人，但口罩不能保证100%防止<br>传染。</p>
 
       </div>
     </div>
