--- a/zh-hant/contact-tracing/index.html
+++ b/zh-hant/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>接觸者追蹤</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午3:59</p>
+            <p class="small-text">Last updated&nbsp;2020年11月18日, 下午1:37</p>
           
         </div>
       </div>
@@ -479,7 +479,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>是的，即使您在與新型冠狀病毒感染者相處時佩戴了口罩，您仍被視為<a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">緊密接觸者</a>。研究表明，口罩可以為佩戴者提供一定保護，並在您受到感染時保護其他人。 </p>
+<p>是的，即使您在與新型冠狀病毒感染者相處時佩戴了口罩，您仍被視為<a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">緊密接觸者</a>。研究表明，口罩可以為佩戴者提供一定保護，並在您受到感染時保護其他人，但口罩不能保證100%防止<br>傳染。</p>
 
       </div>
     </div>
