--- a/healthcare/index.html
+++ b/healthcare/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Healthcare and coverage</h1>
           
-            <p class="small-text">Last updated&nbsp;November 14, 2020 at 6:32 AM</p>
+            <p class="small-text">Last updated&nbsp;November 19, 2020 at 11:59 AM</p>
           
         </div>
       </div>
@@ -446,8 +446,9 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>The following services are covered:</p>
-<ul><li>Specimen collection, diagnostic and antibody testing</li><li>Testing-related visits, including in the following settings:&nbsp;<ul><li>Office&nbsp;</li><li>Urgent care&nbsp;</li><li>Emergency room, or&nbsp;</li><li>Telehealth</li></ul></li><li>Treatment, including:<ul><li>Office visit</li><li><a href="https://covid19.ca.gov/telehealth/#top">Telehealth</a></li><li>Emergency room&nbsp;</li><li>Inpatient&nbsp;</li><li>Outpatient/observation&nbsp;</li><li>Skilled nursing facility&nbsp;</li><li>Long-term acute care (LTAC)&nbsp;</li><li>Acute inpatient rehab&nbsp;</li><li>Home health&nbsp;</li><li>Durable Medical Equipment (DME), like oxygen and ventilator</li><li>Emergency ambulance transportation&nbsp;</li><li>Non-emergent patient transfers via ambulance</li><li>FDA-approved drugs administered as part of an inpatient stay</li><li>Administration fees for FDA-authorized vaccine, when available&nbsp;</li></ul></li></ul>
-<p>Services not covered by traditional Medicare will not be covered. In addition, the following services are excluded:</p>
+<ul><li>Specimen collection, diagnostic and antibody testing</li><li>Testing-related visits, including in the following settings: <ul><li>Office </li><li>Urgent care </li><li>Emergency room, or </li><li>Telehealth</li></ul></li><li>Treatment, including:<ul><li>Office visit</li><li><a href="https://covid19.ca.gov/telehealth/#top">Telehealth</a></li><li>Emergency room </li><li>Inpatient </li><li>Outpatient/observation </li><li>Skilled nursing facility </li><li>Long-term acute care (LTAC) </li><li>Acute inpatient rehab </li><li>Home health </li><li>Durable Medical Equipment (DME), like oxygen and ventilator</li><li>Emergency ambulance transportation </li><li>Non-emergent patient transfers via ambulance</li><li>FDA-licensed, authorized, or approved treatments</li><li>FDA-licensed or authorized vaccines, including the administration fees</li></ul></li></ul>
+<p>Services not covered by traditional Medicare will not be covered by COVID-19 claims reimbursement to healthcare providers and facilities for testing, treatment, and vaccine administration for the uninsured.</p>
+<p>In addition, the following services are excluded:</p>
 <ul><li>Any treatment without a COVID-19 primary diagnosis, except for pregnancy</li><li>Hospice services</li><li>Outpatient prescription drugs</li></ul>
 <p>For more details, see the <a href="https://www.hrsa.gov/CovidUninsuredClaim">HRSA website</a> and their <a href="https://www.hrsa.gov/coviduninsuredclaim/frequently-asked-questions">frequently asked questions</a>.</p>
 
@@ -455,6 +456,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -792,15 +797,11 @@
 
 
 
-<p><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">California Department of Insurance COVID-19 Information</a></p>
+<ul><li><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">California Department of Insurance COVID-19 Information</a></li><li><a href="https://twitter.com/CHHSAgency">California Health and Human Services on Twitter</a></li></ul>
 
 
 
-<p><a href="https://twitter.com/CHHSAgency">California Health and Human Services on Twitter</a></p>
-
-
-
-<p><a href="https://www.facebook.com/CAgovernor/">California Governor’s Office on Facebook</a><br></p>
+<p><br></p>
 </div>
     </div>
   </div>
