--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月19日, 上午10:58</p>
+            <p class="small-text">Last updated&nbsp;2020年11月19日, 下午12:03</p>
           
         </div>
       </div>
