--- a/guide-immigrant-californians/index.html
+++ b/guide-immigrant-californians/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Help for immigrants</h1>
           
-            <p class="small-text">Last updated&nbsp;October 30, 2020 at 8:39 AM</p>
+            <p class="small-text">Last updated&nbsp;November 19, 2020 at 1:43 PM</p>
           
         </div>
       </div>
@@ -182,7 +182,7 @@
 
 
 
-<p>If you’re undocumented or don’t have insurance, you can still get needed COVID-19 testing and treatment at no cost. Medi-Cal care for COVID-19 related testing or treatment alone DOES NOT count under the public charge rule.</p>
+<p>If you’re undocumented or don’t have insurance, you can still get needed COVID-19 testing and treatment at no cost. Medi-Cal care for COVID-19 related testing or treatment alone <strong>does not</strong> count under the public charge rule.</p>
 
 
 
