Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary">Blueprint for a Safer Economy update</h2>
+<h2 class="h3 text-primary">New limited stay at home order</h2>
 
 
 
-<p>California is responding to rapidly rising case rates with an updated tier assignment framework.</p>
+<p>COVID-19 is increasing at alarming rates in California and we all need to do our part to stop the surge. Effective November 21, stop non-essential activities between 10:00 pm to 5:00 am in counties in the Widespread (purple) tier.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">Learn about the changes</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">Read the order</a></p>
