--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 19, 2020 at 2:50 PM</p>
+            <p class="small-text">Last updated&nbsp;November 19, 2020 at 3:06 PM</p>
           
         </div>
       </div>
@@ -194,7 +194,7 @@
 
 
 
-<h2 id="Mask-wearing-exemptions"><strong>Mask wearing exceptions</strong></h2>
+<h2 id="Mask-wearing-exemptions">Mask wearing exceptions</h2>
 
 
 
