--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 19, 2020 at 3:06 PM</p>
+            <p class="small-text">Last updated&nbsp;November 19, 2020 at 3:20 PM</p>
           
         </div>
       </div>
@@ -178,7 +178,7 @@
 
 
 
-<ul><li><a href="https://covid19.ca.gov/masks-and-ppe/#How-masks-help-stop-the-spread"><strong>How masks help stop the spread</strong></a></li><li><a href="https://covid19.ca.gov/masks-and-ppe/#Mask-wearing-exemptions"><strong><a href="https://covid19.ca.gov/masks-and-ppe/#Mask-wearing-exemptions"><strong>Mask wearing exceptions</strong></a></strong></a></li><li><a href="https://covid19.ca.gov/masks-and-ppe/#How-to-wear-a-mask"><strong>How to wear a mask</strong></a></li><li><a href="https://covid19.ca.gov/masks-and-ppe/#What-kind-of-mask-should-you-wear"><strong>What kind of mask should you wear?</strong></a></li><li><a href="https://covid19.ca.gov/masks-and-ppe/#Questions-and-answers"><strong>Questions and answers</strong></a></li></ul>
+<ul><li><a href="https://covid19.ca.gov/masks-and-ppe/#How-masks-help-stop-the-spread"><strong>How masks help stop the spread</strong></a></li><li><a href="https://covid19.ca.gov/masks-and-ppe/#Mask-wearing-exemptions"><strong></strong></a><strong><a href="https://covid19.ca.gov/masks-and-ppe/#Mask-wearing-exemptions"><strong>Mask wearing exceptions</strong></a></strong></li><li><a href="https://covid19.ca.gov/masks-and-ppe/#How-to-wear-a-mask"><strong>How to wear a mask</strong></a></li><li><a href="https://covid19.ca.gov/masks-and-ppe/#What-kind-of-mask-should-you-wear"><strong>What kind of mask should you wear?</strong></a></li><li><a href="https://covid19.ca.gov/masks-and-ppe/#Questions-and-answers"><strong>Questions and answers</strong></a></li></ul>
 
 
 
