--- a/pages/translated-posts/new-es.html
+++ b/pages/translated-posts/new-es.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">Plan para una economía más segura actualizado</h2>
+<h2 class="h3 text-primary">Nueva orden limitada de permanecer en casa</h2>
 
 
 
-<p>California está respondiendo al rápido aumento de las tasas de casos con un marco de asignación de niveles actualizado.</p>
+<p>La COVID-19 está aumentando a un ritmo alarmante en California y todos debemos hacer nuestra parte para detener dicho aumento. A partir del 21 de noviembre, se detendrán las actividades no esenciales entre las 10:00 p. m. y las 5:00 a. m. en los condados que se encuentren en el nivel Extendido (morado).</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">Obtenga más información sobre los cambios</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">Leer la orden</a></p>
