--- a/pages/translated-posts/new-ko.html
+++ b/pages/translated-posts/new-ko.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">더욱 안전한 경제를 위한 청사진 업데이트</h2>
+<h2 class="h3 text-primary">새로 시행되는 제한적 자택 체류 명령</h2>
 
 
 
-<p>캘리포니아는 급격한 사례 증가세에 대해 단계 배정 체계를 업데이트하여 대응하고 있습니다.</p>
+<p>캘리포니아 내 COVID-19 증가세가 위험 수위에 도달하여 이 증가를 막기 위해서는 모두가 각자의 역할을 다해야 합니다. 11월 21일 자로 광범위(자주색) 단계에 있는 카운티에서는 오후 10시부터 오전 5시까지 비필수적 활동을 중단하십시오.</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">변경 사항을 확인하십시오</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">본 명령과 관련된 사항을 확인하십시오.</a></p>
