--- a/pages/translated-posts/new-vi.html
+++ b/pages/translated-posts/new-vi.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">Cập nhật Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h2>
+<h2 class="h3 text-primary">Lệnh ở nhà hạn chế mới</h2>
 
 
 
-<p>California đang ứng phó với tỷ lệ ca nhiễm gia tăng nhanh chóng với bản cập nhật khung chỉ định cấp.</p>
+<p>Đại dịch COVID-19 đang gia tăng ở mức đáng báo động tại California và tất cả chúng ta cần thực hiện trách nhiệm của mình để ngăn chặn tình trạng gia tăng đột biến. Bắt đầu từ ngày 21 tháng 11, dừng các hoạt động không thiết yếu trong khoảng thời gian từ 10 giờ tối đến 5 giờ sáng tại các quận ở cấp Lan Rộng (màu tím).</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">Tìm hiểu về những thay đổi</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">Đọc lệnh này</a></p>
