--- a/pages/translated-posts/new-zh-hant.html
+++ b/pages/translated-posts/new-zh-hant.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">更安全的經濟藍圖更新</h2>
+<h2 class="h3 text-primary">全新限制性居家避疫令</h2>
 
 
 
-<p>加州正在利用更新後的等級劃分制度來應對快速上升的患病率。</p>
+<p>加州的COVID-19病例數正在以駭人的速度增加，我們所有人都需要盡力阻止病例數激增。自11月21日起，處於廣泛傳播（紫色）等級的縣必須在晚上10:00至第二天凌晨5:00之間停止非必要活動。</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">了解有關變更的資訊</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">查閱該命令</a></p>
