--- a/pages/translated-posts/new-ar.html
+++ b/pages/translated-posts/new-ar.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">تحديث البرنامج التخطيطي لاقتصاد أكثر أمانًا</h2>
+<h2 class="h3 text-primary">قرار جديد ومُحدد للبقاء في المنزل</h2>
 
 
 
-<p>تتصدى كاليفورنيا لمعدلات الحالات المتزايدة بِشكل سريع من خلال إطار عمل محدث لتخصيص الفئات.</p>
+<p>يزداد انتشار فيروس كوفيد-19 بمعدلات مثيرة للقلق في كاليفورنيا، ويجب علينا جميعًا القيام بدورنا لوقف هذه الموجة. اعتبارًا من 21 نوفمبر، يُرجى التوقف عن مزاولة الأنشطة غير الضرورية من الساعة 10:00 مساءً حتى الساعة 5:00 صباحًا في مقاطعات الفئة الواسعة الانتشار (البنفسجي).</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">تعرف على التغييرات</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">اقرأ القرار.</a></p>
