--- a/pages/translated-posts/new-tl.html
+++ b/pages/translated-posts/new-tl.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary">Update sa Blueprint para sa isang Mas Ligtas na Ekonomiya</h2>
+<h2 class="h3 text-primary">Bagong limitadong utos sa pananatili sa bahay</h2>
 
 
 
-<p>Tinutugunan ng California ang mabilis na pagtaas ng rate ng kaso sa pamamagitan ng na-update na framework ng pagtatalaga ng tier.</p>
+<p>Nakakaalerto na ang pagdami ng mga kaso ng COVID-19 sa California at kailangan nating lahat na gawin ang ating bahagi para mapigilan ang pagdami pa nito. Simula sa Nobyembre 21, ihinto ang lahat ng hindi kinakailangang aktibidad mula 10:00 pm hanggang 5:00 am sa mga county na nasa tier na Napakarami (purple).</p>
 
 
 
-<p><a class="action-link pt-3 pb-3 px-4" href="https://covid19.ca.gov/safer-economy/">Alamin ang mga pagbabago</a></p>
+<p><a class="action-link pt-3 pb-3 px-4" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/limited-stay-at-home-order.aspx">Basahin ang utos</a></p>
