--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 19, 2020 sa 6:29 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 20, 2020 sa 4:58 AM</p>
           
         </div>
       </div>
