--- a/zh-hans/data-and-tools/index.html
+++ b/zh-hans/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>数据及工具</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月19日, 下午6:29</p>
+            <p class="small-text">Last updated&nbsp;2020年11月20日, 上午4:58</p>
           
         </div>
       </div>
